Update the blocks to return all data for subnet and chekpoint
