# backend/src/interfaces/output/blocksResponse.interface.ts
@@ -1,8 +1,13 @@
 export interface BlocksResponse {
   blocks: BlockResponse[];
-  latestMinedBlock: BaseBlockResponse | {};
-  latestSubnetCommittedBlock: BaseBlockResponse | {};
-  latestParentChainCommittedBlock: BaseBlockResponse | {};
+  subnet: {
+    latestMinedBlock?: BaseBlockResponse | {};
+    latestCommittedBlock?: BaseBlockResponse | {};
+  };
+  checkpoint: {
+    latestCommittedSubnetBlock: BaseBlockResponse;
+    latestSubmittedSubnetBlock: BaseBlockResponse;
+  };
   health: {
     status: 'UP' | 'DOWN';
   };
